--- a/src/App.css
+++ b/src/App.css
@@ -69,6 +69,7 @@
   align-items: center;
   font-family: "Montserrat", sans-serif;
   padding: 2%;
+  color: black;
   margin: 3%;
   text-decoration: none;
 }
@@ -82,6 +83,7 @@
   position: relative;
   display: inline-block;
   cursor: pointer;
+  color: black;
   transition: all 0.3s ease;
 }
 
@@ -143,6 +145,7 @@
     right: 0;
     background-color: #e5eaee;
     z-index: 1;
+    color: black
   }
 
   .links {
